--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,3 +22,10 @@ jobs:
 
       - name: Build
         run: dotnet build ZaloTools.sln --configuration Release
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ZaloTools-build
+          path: |
+            ZaloTools/bin/Release/
